--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "scripts": {
     "build": "qwik build",
+    "build-storybook": "storybook build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.types": "tsc --incremental --noEmit",
@@ -18,18 +19,30 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
+    "storybook": "storybook dev -p 6006",
     "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.2.6",
     "@builder.io/qwik-city": "^1.2.6",
+    "@storybook/addon-essentials": "7.0.23",
+    "@storybook/addon-links": "7.0.23",
+    "@storybook/blocks": "7.0.23",
+    "@storybook/builder-vite": "7.0.23",
+    "@storybook/html": "7.0.23",
+    "@storybook/html-vite": "7.0.23",
     "@types/eslint": "8.40.2",
-    "@types/node": "^20.4.0",
+    "@types/node": "^20.4.8",
     "@typescript-eslint/eslint-plugin": "5.61.0",
     "@typescript-eslint/parser": "5.61.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.44.0",
     "eslint-plugin-qwik": "^1.2.6",
+    "postcss": "^8.4.23",
     "prettier": "2.8.8",
+    "storybook": "7.0.23",
+    "storybook-framework-qwik": "0.2.2",
+    "tailwindcss": "^3.3.1",
     "typescript": "5.1.6",
     "undici": "5.22.1",
     "vite": "4.4.0",
