--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.2.6",
     "@builder.io/qwik-city": "^1.2.6",
+    "@builder.io/qwik-react": "0.5.0",
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@mui/material": "5.13.0",
+    "@mui/x-data-grid": "6.4.0",
     "@storybook/addon-essentials": "7.0.23",
     "@storybook/addon-links": "7.0.23",
     "@storybook/blocks": "7.0.23",
@@ -33,6 +38,8 @@
     "@storybook/html-vite": "7.0.23",
     "@types/eslint": "8.40.2",
     "@types/node": "^20.4.8",
+    "@types/react": "18.2.13",
+    "@types/react-dom": "18.2.6",
     "@types/splitting": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "5.61.0",
     "@typescript-eslint/parser": "5.61.0",
@@ -42,6 +49,8 @@
     "eslint-plugin-qwik": "^1.2.6",
     "postcss": "^8.4.23",
     "prettier": "2.8.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "storybook": "7.0.23",
     "storybook-framework-qwik": "0.2.2",
     "tailwindcss": "^3.3.1",
@@ -52,7 +61,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.32.0",
+    "framer-motion": "^10.16.0",
     "gsap": "^3.12.2",
+    "motion": "^10.16.2",
+    "popmotion": "^11.0.5",
     "smooth-scrollbar": "^8.8.4",
     "splitting": "^1.0.6",
     "supabase-auth-helpers-qwik": "^0.0.3"
