--- a/package.json
+++ b/package.json
@@ -61,11 +61,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.32.0",
-    "framer-motion": "^10.16.0",
-    "gsap": "^3.12.2",
+    "@unpic/qwik": "^0.0.25",
+    "embla-carousel": "8.0.0-rc11",
+    "locomotive-scroll": "5.0.0-beta.8",
     "motion": "^10.16.2",
     "popmotion": "^11.0.5",
-    "smooth-scrollbar": "^8.8.4",
     "splitting": "^1.0.6",
     "supabase-auth-helpers-qwik": "^0.0.3"
   }
