--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "build-storybook": "storybook build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
+    "deploy": "vercel deploy",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
@@ -26,10 +27,7 @@
     "@builder.io/qwik": "^1.2.6",
     "@builder.io/qwik-city": "^1.2.6",
     "@builder.io/qwik-react": "0.5.0",
-    "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@mui/material": "5.13.0",
-    "@mui/x-data-grid": "6.4.0",
     "@storybook/addon-essentials": "7.0.23",
     "@storybook/addon-links": "7.0.23",
     "@storybook/blocks": "7.0.23",
@@ -38,8 +36,6 @@
     "@storybook/html-vite": "7.0.23",
     "@types/eslint": "8.40.2",
     "@types/node": "^20.4.8",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
     "@types/splitting": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "5.61.0",
     "@typescript-eslint/parser": "5.61.0",
@@ -49,24 +45,26 @@
     "eslint-plugin-qwik": "^1.2.6",
     "postcss": "^8.4.23",
     "prettier": "2.8.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "storybook": "7.0.23",
     "storybook-framework-qwik": "0.2.2",
     "tailwindcss": "^3.3.1",
     "typescript": "5.1.6",
     "undici": "5.22.1",
+    "vercel": "^29.1.1",
     "vite": "4.4.0",
     "vite-tsconfig-paths": "4.2.0"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.32.0",
     "@unpic/qwik": "^0.0.25",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "embla-carousel": "8.0.0-rc11",
     "locomotive-scroll": "5.0.0-beta.8",
     "motion": "^10.16.2",
     "popmotion": "^11.0.5",
     "splitting": "^1.0.6",
-    "supabase-auth-helpers-qwik": "^0.0.3"
+    "supabase-auth-helpers-qwik": "^0.0.3",
+    "tailwind-merge": "^1.14.0"
   }
 }
