--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "locomotive-scroll": "5.0.0-beta.8",
     "motion": "^10.16.2",
     "popmotion": "^11.0.5",
+    "react-dom": "^18.2.0",
     "splitting": "^1.0.6",
     "supabase-auth-helpers-qwik": "^0.0.3",
     "tailwind-merge": "^1.14.0"
