--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "types": ["node", "vite/client", "better-typescript"],
     "paths": {
       "~/*": ["./*"],
-      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
       "@ui": ["./src/components/ui/*"]
     }
   },
