--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "eslint": "8.44.0",
     "eslint-plugin-qwik": "^1.2.6",
     "postcss": "^8.4.23",
-    "prettier": "2.8.8",
+    "prettier": "3.0",
+    "prettier-plugin-tailwindcss": "^0.5.3",
     "storybook": "7.0.23",
     "storybook-framework-qwik": "0.2.2",
     "tailwindcss": "^3.3.1",
@@ -55,6 +56,7 @@
     "vite-tsconfig-paths": "4.2.0"
   },
   "dependencies": {
+    "@qwikest/icons": "^0.0.8",
     "@supabase/supabase-js": "^2.32.0",
     "@unpic/qwik": "^0.0.25",
     "class-variance-authority": "^0.7.0",
