--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,6 @@
 		}
 	},
 	"files": ["./.eslintrc.cjs"],
-	"include": ["src", "./*.d.ts", "./*.config.ts"]
+	"include": ["src", "./*.d.ts", "./*.config.ts", 
+  "tailwind.config.js", "prettier.config.js"]
 }
