change font family and add personal projects

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "paths": {
       "~/*": ["./*"],
       "@components/*": ["./src/components/*"],
-      "@ui": ["./src/components/ui/*"]
+      "@ui": ["./src/components/ui/*"],
+      "@data": ["./src/data/*"]
     }
   },
   "files": ["./.eslintrc.cjs"],
