--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
-  "name": "my-qwik-basic-starter",
+  "dependencies": {
+    "@qwikest/icons": "^0.0.9",
+    "@supabase/supabase-js": "^2.32.0",
+    "@unpic/qwik": "^0.0.25",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "embla-carousel": "8.0.0-rc11",
+    "locomotive-scroll": "5.0.0-beta.8",
+    "motion": "^10.16.2",
+    "popmotion": "^11.0.5",
+    "react-dom": "^18.2.0",
+    "splitting": "^1.0.6",
+    "supabase-auth-helpers-qwik": "^0.0.3",
+    "tailwind-merge": "^1.14.0"
+  },
   "description": "Demo App with Routing built-in (recommended)",
-  "engines": {
-    "node": ">=15.0.0"
-  },
-  "private": true,
-  "scripts": {
-    "build": "qwik build",
-    "build-storybook": "storybook build",
-    "build.client": "vite build",
-    "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
-    "build.types": "tsc --incremental --noEmit",
-    "deploy": "vercel deploy",
-    "dev": "vite --mode ssr",
-    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "fmt": "prettier --write .",
-    "fmt.check": "prettier --check .",
-    "lint": "eslint \"src/**/*.ts*\"",
-    "preview": "qwik build preview && vite preview --open",
-    "start": "vite --open --mode ssr",
-    "storybook": "storybook dev -p 6006",
-    "qwik": "qwik"
-  },
   "devDependencies": {
     "@builder.io/qwik": "^1.2.6",
     "@builder.io/qwik-city": "^1.2.6",
@@ -55,19 +47,27 @@
     "vite": "4.4.0",
     "vite-tsconfig-paths": "4.2.0"
   },
-  "dependencies": {
-    "@qwikest/icons": "^0.0.8",
-    "@supabase/supabase-js": "^2.32.0",
-    "@unpic/qwik": "^0.0.25",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "embla-carousel": "8.0.0-rc11",
-    "locomotive-scroll": "5.0.0-beta.8",
-    "motion": "^10.16.2",
-    "popmotion": "^11.0.5",
-    "react-dom": "^18.2.0",
-    "splitting": "^1.0.6",
-    "supabase-auth-helpers-qwik": "^0.0.3",
-    "tailwind-merge": "^1.14.0"
+  "engines": {
+    "node": ">=15.0.0"
+  },
+  "name": "my-qwik-basic-starter",
+  "private": true,
+  "scripts": {
+    "build": "qwik build",
+    "build-storybook": "storybook build",
+    "build.client": "vite build",
+    "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
+    "build.types": "tsc --incremental --noEmit",
+    "deploy": "vercel deploy",
+    "dev": "vite --mode ssr",
+    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+    "fmt": "prettier --write .",
+    "fmt.check": "prettier --check .",
+    "lint": "eslint \"src/**/*.ts*\"",
+    "preview": "qwik build preview && vite preview --open",
+    "qwik": "qwik",
+    "start": "vite --open --mode ssr",
+    "storybook": "storybook dev -p 6006"
   }
 }
